<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvAltitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvSignalStrength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signal_strength"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvBatteryLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_level"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSaveToCSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_to_csv"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvFileLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="File location will appear here"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:padding="16dp"/>



</LinearLayout>


